add players paths

--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
 </head>
 
 <body>
+	 <nav>
+  
+		<div>About</div>
+		<div>Background</div>
+
+	 </nav>
 	<div class="warpper">
 		
 		<div>
-			<button>dark-mode</button>
-			<nav></nav> 
+			
 			<h1 class="text">Lets Play Nenigo</h1>
 		</div>
 		<div> 
