rename the call and ids

--- a/index.html
+++ b/index.html
@@ -12,110 +12,112 @@
 </head>
 
 <body>
-	 <nav>
+	<nav>
   
 		<div>About</div>
 		<div>Background</div>
 
-	 </nav>
+	</nav>
 	<div class="warpper">
 		
 		<div>
 			
-			<h1 class="text">Lets Play Nenigo</h1>
+			<h1 class="text"></h1>
+
+			<button class = "rollBtn">Roll the Nenios</button>
 		</div>
-		<div> 
-			<img src="./image/Gold-1.png" alt="">
-			<img src="./image/Gold-2.png" alt="">
-			<img src="./image/Silver-1.png" alt="">
-			<img src="./image/Silver-2.png" alt="">
+		<div class="images"> 
+			<img  class="img1" src="../image/1-1.png" alt="imgae 1">
+			<img  class="img2" src="../image/2-1.png" alt="imgae 2">
+			<img  class="img3" src="../image/3-1.png" alt="imgae 3">
+			<img  class="img4" src="../image/4-1.png" alt="imgae 4">
 		</div>
 	
 
   <section class="board">
-		<div class="cell" id="aqua25">&#127775</div>
-		<div class="cell" id="aqua24"></div>
-		<div class="cell" id="aqua23"></div>
-		<div class="cell" id="aqua22"></div>
-		<div class="cell" id="aqua21"></div>
-		<div class="cell" id="aqua20"></div>
-		<div class="cell" id="aqua19"></div>
-		<div class="cell" id="aqua18"></div>
-		<div class="cell" id="aqua17">&#127775</div>
-    <div class="cell" id="aqua26"></div>
-		<div class="cell" id="yellow51">&#127775</div>
-		<div class="cell" id="yellow50"></div>
-		<div class="cell" id="yellow49"></div>
-		<div class="cell" id="yellow48"></div>
-		<div class="cell" id="yellow47"></div>
-		<div class="cell" id="yellow46"></div>
-		<div class="cell" id="yellow45">&#127775</div>
-		<div class="cell" id="aqua16"></div>
-    <div class="cell" id="aqua27"></div>
-		<div class="cell" id="yellow52"></div>
-		<div class="cell" id="gold69">&#127775</div>
-		<div class="cell" id="gold68"></div>
-		<div class="cell" id="gold67"></div>
-		<div class="cell" id="gold66"></div>
-		<div class="cell" id="gold65">&#127775</div>
-		<div class="cell" id="yellow44"></div>
-		<div class="cell" id="aqua15"></div>
-    <div class="cell" id="aqua28"></div>
-    <div class="cell" id="yellow53"></div>
-		<div class="cell" id="gold70"></div>
-		<div class="cell" id="blue79">&#127775</div>
-		<div class="cell" id="blue78"></div>
-		<div class="cell" id="blue77">&#127775</div>
-		<div class="cell" id="gold64"></div>
-    <div class="cell" id="yellow43"></div>
-		<div class="cell" id="aqua14"></div>
-		<div class="cell" id="aqua29"></div>
-		<div class="cell" id="yellow54"></div>
-		<div class="cell" id="gold71"></div>
-		<div class="cell" id="blue80"></div>
-		<div class="cell" id="red81"></div>
-		<div class="cell" id="blue76" ></div>
-		<div class="cell" id="gold63"></div>
-    <div class="cell" id="yellow42"></div>
-    <div class="cell" id="aqua13"></div>
-    <div class="cell" id="aqua30"></div>
-		<div class="cell" id="yellow55"></div>
-		<div class="cell" id="gold72"></div>
-    <div class="cell" id="blue73">&#127775</div>
-		<div class="cell" id="blue74"></div>
-		<div class="cell" id="blue75">&#127775</div>
-		<div class="cell" id="gold62"></div>
-		<div class="cell" id="yellow41"></div>
-		<div class="cell" id="aqua12"></div>
-		<div class="cell" id="aqua31"></div>
-		<div class="cell" id="yellow56"></div>
-		<div class="cell" id="gold57">&#127775</div>
-    <div class="cell" id="gold58"></div>
-    <div class="cell" id="gold59"></div>
-    <div class="cell" id="gold60"></div>
-    <div class="cell" id="gold61">&#127775</div>
-		<div class="cell" id="yellow40"></div>
-		<div class="cell" id="aqua11"></div>
-    <div class="cell" id="aqua32"></div>
-		<div class="cell" id="yellow33">&#127775</div>
-		<div class="cell" id="yellow34"></div>
-		<div class="cell" id="yellow35"></div>
-		<div class="cell" id="yellow36"></div>
-		<div class="cell" id="yellow37"></div>
-		<div class="cell" id="yellow38"></div>
-		<div class="cell" id="yellow39">&#127775</div>
-		<div class="cell" id="aqua10"></div>
-    <div class="cell" id="aqua1">&#127775</div>
-    <div class="cell" id="aqua2"></div>
-    <div class="cell" id="aqua3"></div>
-		<div class="cell" id="aqua4"></div>
-		<div class="cell" id="aqua5"></div>
-		<div class="cell" id="aqua6"></div>
-		<div class="cell" id="aqua7"></div>
-    <div class="cell" id="aqua8"></div>
-    <div class="cell" id="aqua9">&#127775</div>
+		<div class="cell aqua" id="0">&#127775</div>
+		<div class="cell aqua" id="aqua1"></div>
+		<div class="cell aqua" id="aqua2"></div>
+		<div class="cell aqua" id="aqua 3"></div>
+		<div class="cell aqua" id="aqua 4"></div>
+		<div class="cell aqua" id="aqua 5"></div>
+		<div class="cell aqua" id="aqua 6"></div>
+		<div class="cell aqua" id="aqua 7"></div>
+		<div class="cell aqua" id="aqua 8">&#127775</div>
+    <div class="cell aqua" id="aqua 9"></div>
+		<div class="cell yellow" id="yellow 10">&#127775</div>
+		<div class="cell yellow" id="yellow 11"></div>
+		<div class="cell yellow" id="yellow 12"></div>
+		<div class="cell yellow" id="yellow 13"></div>
+		<div class="cell yellow" id="yellow 14"></div>
+		<div class="cell yellow" id="yellow 15"></div>
+		<div class="cell yellow" id="yellow 16">&#127775</div>
+		<div class="cell aqua" id="aqua 17"></div>
+    <div class="cell aqua" id="aqua 18"></div>
+		<div class="cell yellow" id="yellow 19"></div>
+		<div class="cell gold" id="gold 20">&#127775</div>
+		<div class="cell gold" id="gold 21"></div>
+		<div class="cell gold" id="gold 22"></div>
+		<div class="cell gold" id="gold 23"></div>
+		<div class="cell gold" id="gold 24">&#127775</div>
+		<div class="cell yellow" id="yellow 25"></div>
+		<div class="cell aqua" id="aqua 26"></div>
+    <div class="cell aqua" id="aqua 27"></div>
+    <div class="cell yellow" id="yellow 28"></div>
+		<div class="cell gold" id="gold 29"></div>
+		<div class="cell blue" id="blue 30">&#127775</div>
+		<div class="cell blue" id="blue 31"></div>
+		<div class="cell blue" id="blue 32">&#127775</div>
+		<div class="cell gold" id="gold 33"></div>
+    <div class="cell yellow" id="yellow 34"></div>
+		<div class="cell aqua" id="aqua 35"></div>
+		<div class="cell aqua" id="aqua 36"></div>
+		<div class="cell yellow" id="yellow 37"></div>
+		<div class="cell gold" id="gold 38"></div>
+		<div class="cell blue" id="blue 39"></div>
+		<div class="cell red" id="red 40"></div>
+		<div class="cell blue" id="blue 41" ></div>
+		<div class="cell gold" id="gold 42"></div>
+    <div class="cell yellow" id="yellow 43"></div>
+    <div class="cell aqua" id="aqua 44"></div>
+    <div class="cell aqua" id="aqua 45"></div>
+		<div class="cell yellow" id="yellow 46"></div>
+		<div class="cell gold" id="gold 47"></div>
+    <div class="cell blue" id="blue 48">&#127775</div>
+		<div class="cell blue" id="blue 49"></div>
+		<div class="cell blue" id="blue 50">&#127775</div>
+		<div class="cell gold" id="gold 51"></div>
+		<div class="cell yellow" id="yellow 52"></div>
+		<div class="cell aqua" id="aqua 53"></div>
+		<div class="cell aqua" id="aqua 54"></div>
+		<div class="cell yellow" id="yellow 55"></div>
+		<div class="cell gold" id="gold 56">&#127775</div>
+    <div class="cell gold" id="gold 57"></div>
+    <div class="cell gold" id="gold 58"></div>
+    <div class="cell gold" id="gold 59"></div>
+    <div class="cell gold" id="gold 60">&#127775</div>
+		<div class="cell yellow" id="yellow 61"></div>
+		<div class="cell aqua" id="aqua 62"></div>
+    <div class="cell aqua" id="aqua 63"></div>
+		<div class="cell yellow" id="yellow 64">&#127775</div>
+		<div class="cell yellow" id="yellow 65"></div>
+		<div class="cell yellow" id="yellow 66"></div>
+		<div class="cell yellow" id="yellow 67"></div>
+		<div class="cell yellow" id="yellow 68"></div>
+		<div class="cell yellow" id="yellow 69"></div>
+		<div class="cell yellow" id="yellow 70">&#127775</div>
+		<div class="cell aqua" id="aqua 71"></div>
+    <div class="cell aqua" id="aqua 72">&#127775</div>
+    <div class="cell aqua" id="aqua 73"></div>
+    <div class="cell aqua" id="aqua 74"></div>
+		<div class="cell aqua" id="aqua 75"></div>
+		<div class="cell aqua" id="aqua 76"></div>
+		<div class="cell aqua" id="aqua 77"></div>
+		<div class="cell aqua" id="aqua 78"></div>
+    <div class="cell aqua" id="aqua 79"></div>
+    <div class="cell aqua" id="aqua 80">&#127775</div>
 	</section>
-	<footer><button type="reset">Reset</button></footer>
+	<footer><button id="reset" type="reset">Reset</button></footer>
 </div>
 
   <script src="./js/app.js"></script>
